syntax = "proto3";
package black_panther.messages;

message BodyStyle {
  string description = 1;
}
